Project1Vanquish/force-app/main/default/objects/Payment_Receipt__c/Payment_Receipt__c.object-meta.xml
<CustomObject>
    <description>To keep track of the payments Account makes.</description>
    <label>Payment Receipt</label>
    <nameField>
        <label>Payment Receipt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>