Project1Vanquish/force-app/main/default/objects/Payment_Receipt__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account making the payments</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Payment_Reciepts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>