Project1Vanquish/force-app/main/default/objects/Payment_Receipt__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order payments being made to</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payment Receipts</relationshipLabel>
    <relationshipName>Payment_Reciepts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>