Project1Vanquish/force-app/main/default/objects/Payment_Receipt__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <displayFormat>Receipt{000000}</displayFormat>
    <label>Receipt Number</label>
    <type>AutoNumber</type>
</CustomField>